--- a/package.json
+++ b/package.json
@@ -17,15 +17,23 @@
     "@paperxyz/react-client-sdk": "^1.1.3",
     "@paperxyz/react-client-sdk-checkout-with-eth": "^1.0.4",
     "@reduxjs/toolkit": "^1.9.5",
+    "@sendgrid/mail": "^7.7.0",
     "@thirdweb-dev/react": "^3.14.41",
     "@thirdweb-dev/sdk": "^3.10.60",
+    "@types/multer": "^1.4.9",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.0",
     "dayjs": "^1.11.8",
+    "dotenv": "^16.3.1",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
     "ethers": "^5.7.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.0",
+    "multer": "^1.4.5-lts.1",
     "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
